# woorinara-forum

./: .gitignore
vue-project/: jsconfig.json  package-lock.json  package.json  router.js
vue-project/src/: App.vue  axios-config.js  main.js
vue-project/src/AIScreens/: createPost.html  header_blue.html  home.html  modal.html  post.html  postCard.html  tabNavigation.html
vue-project/src/assets/: main.css
vue-project/src/components/: Article.vue  ChildReply.vue  Comment.vue  CommentInput.vue  Headers.vue  NestedReply.vue  ParentReply.vue  PostCard.vue  PostContent.vue  PostList.vue  postFooter.vue
vue-project/src/components/AIScreens/: alert.html  header_green.html
vue-project/src/components/shared/: Modal.vue
vue-project/src/pages/: CommentDetail.vue  CreatePost.vue  Home.vue  Notice.vue  Post.vue  Search.vue  practice.vue
vue-project/src/services/: api.js  commentAPI.js  getToken.js  noticeAPI.js  postAPI.js
vue-project/src/store/: replyStore.js
vue-project/src/utils/logging/: log.js
vue-project/src/utils/navigation/: navigation.js
vue-project/src/utils/timeCal/: calculateTime.js  formatTime.js
vue-project/src/utils/validation/: validNoticeList.js  validReadCommentList.js  validReadPostDetail.js  validSearchPost.js
web-server/: main.py  pyproject.toml
